add new posts and assets

--- a/_posts/2025-02-17-welcome.md
+++ b/_posts/2025-02-17-welcome.md
@@ -1,12 +1,10 @@
 ---
 title: Welcome to my blog
 date: 2025-02-17 15:00:00 +0100
-categories: [generic]
+categories: [Posts]
 tags: [generic]     # TAG names should always be lowercase
 ---
-# Welcome to my blog
-
-![Desktop View](/assets/img/welcome.jpeg){: width="350" height="200" }
+![Desktop View](/assets/img/welcome2.png){: width="700" height="400" }
 
 It's been a long time since I first thought about opening a blog, and here we are.
 
