add new posts and assets

--- a/_posts/2025-02-17-welcome.md
+++ b/_posts/2025-02-17-welcome.md
@@ -4,7 +4,7 @@ date: 2025-02-17 15:00:00 +0100
 categories: [Posts]
 tags: [generic]     # TAG names should always be lowercase
 ---
-![Desktop View](/assets/img/welcome2.png){: width="700" height="400" }
+![Desktop View](/assets/img/welcome.png){: width="700" height="400" }
 
 It's been a long time since I first thought about opening a blog, and here we are.
 
