add new posts and assets and webmaster verification code

--- a/wip/2025-02-19-homelab-02.md
+++ b/wip/2025-02-19-homelab-02.md
@@ -1,9 +1,20 @@
 ---
-title: Homelab, ?
+title: Homelab, set the target
 date: 2025-02-19 23:30:00 +0100
 categories: [Posts]
 tags: [homelab]     # TAG names should always be lowercase
 ---
+
+We've all been there at least once, if you are like me, many times! A lot of cool ideas, the brain crunching a lot of different layouts, configurations, application and networking deployments and in the end you are stuck staring at the screen on the ebay / aliexpress / shady websites listings to find the best fit for your needs and the best bangs for your bucks.
+
+And i am exactly there. 
+
+Therefore i thought, why not going through a design process, why not to write about this in the first place in a structured way, a little bit like this:
+
+1. Set the target
+2. Deisgn the architecture and the general layout
+3. Bill of materials
+4. Purchasing: 
 
 Tiny PC (1L)
 
