trigger ci/cd again

--- a/_posts/2025-02-19-homelab-02.md
+++ b/_posts/2025-02-19-homelab-02.md
@@ -4,9 +4,9 @@ date: 2025-02-21 11:30:00 +0100
 categories: [Posts]
 tags: [homelab]     # TAG names should always be lowercase
 ---
-![Desktop View](/assets/img/Homelab-how to go about it.png)
+![Desktop View](/assets/img/homelab-header-02.png)
 
-We've all been there at least once, if you are like me, many times! A lot of cool ideas, the brain crunching a lot of different layouts, configurations, application and networking deployments and in the end you are stuck staring at the screen on the ebay / aliexpress / shady websites listings to find the best fit for your needs and the best bangs for your bucks.
+We've all been there at least once, if you are like me, many times! A lot of cool ideas, the brain crunching a lot of different layouts, configurations, application and networking deployments and in the end you are stuck staring at the screen on the ebay / aliexpress / shady websites listings to find the best fit for your needs and the best bangs for your bucks. 
 
 And i am exactly there. 
 
